--- a/css/leftPart.css
+++ b/css/leftPart.css
@@ -176,8 +176,8 @@ body {
 
 .add_color {
     position: absolute;
-    top: -47px;
-    left: 139px;
+    top: -13px;
+    left: 155px;
     z-index: 2;
 }
 
@@ -185,9 +185,9 @@ body {
     height: 58px;
     width: 114px;
     padding: 3px;
-    margin: 35px 15px;
     background: #FFFFFF;
     box-shadow: 0px 1px 5px 2px rgba(0,0,0,0.3);
+    cursor: pointer;
 }
 
 .color_elem {
@@ -197,6 +197,7 @@ body {
     height: 15px;
     margin: 5px 4px;
     box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.3);
+    cursor: pointer;
 }
 
 .color_elem:hover {
@@ -242,14 +243,14 @@ body {
 
 .arrow {
     position: absolute;
-    top: 42px;
-    left: -2px;
+    top: 4px;
+    left: -21px;
     display: inline-block;
     font-size: 30px;
     color: #FFFFFF;
-    -webkit-transform: scaleX(0.7);
-    -moz-transform: scaleX(0.7);
-    -o-transform: scaleX(0.7);
-    transform: scaleX(0.7);
-    text-shadow: -4px 0px 6px rgba(0, 0, 0, 0.3);
+    -webkit-transform: scaleX(0.9);
+    -moz-transform: scaleX(0.9);
+    -o-transform: scaleX(0.9);
+    transform: scaleX(0.9);
+    text-shadow: -3px 0px 4px rgba(0, 0, 0, 0.3);
 }
