--- a/css/leftPart.css
+++ b/css/leftPart.css
@@ -62,6 +62,7 @@ body {
     border: 1px solid #B3B3B3;
     border-radius: 3px;
     cursor: pointer;
+    outline: none;
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FFFFFF), color-stop(1, #eee9e9));
     background: -o-linear-gradient(linear, left top, left bottom, color-stop(0, #FFFFFF), color-stop(1, #eee9e9));
     background: -moz-linear-gradient(top, #FFFFFF, #eee9e9);
@@ -69,7 +70,7 @@ body {
     /*background: #ffffff;*/
 }
 
-.button_color_active {
+.color_active {
     background: #DCDCDC;
     outline: none;
     box-shadow: 0px -1px 1px 0px rgba(0,0,0,0.6);
@@ -77,6 +78,24 @@ body {
     background: -o-linear-gradient(linear, left top, left bottom, color-stop(0, #DCDCDC), color-stop(1, #eee9e9));
     background: -moz-linear-gradient(top, #DCDCDC, #eee9e9);
     background: linear-gradient(linear, left top, left bottom, color-stop(0, #DCDCDC), color-stop(1, #eee9e9));
+}
+
+.button_color {
+    width: 126px;
+}
+
+.button_color:active {
+    outline: none;
+}
+
+.choosed_color {
+    height: 20px;
+    width: 18px;
+    border: 1px solid #B3B3B3;
+    border-radius: 3px;
+    background: #ffffff;
+    display: inline-block;
+    vertical-align: middle;
 }
 
 .tumbler {
