--- a/css/leftPart.css
+++ b/css/leftPart.css
@@ -46,6 +46,10 @@ body {
     position: relative;
 }
 
+.button_legend {
+    width: 140px;
+}
+
 .button_legend:active {
     outline: none;
     box-shadow: 0px -1px 1px 0px rgba(0,0,0,0.6);
