--- a/css/leftPart.css
+++ b/css/leftPart.css
@@ -85,7 +85,7 @@ body {
 }
 
 .button_color {
-    width: 126px;
+    width: 130px;
 }
 
 .button_color:active {
@@ -96,6 +96,7 @@ body {
     height: 20px;
     width: 18px;
     border: 1px solid #B3B3B3;
+    background: rgb(255,255,255);
     border-radius: 3px;
     display: inline-block;
     vertical-align: middle;
